src/test/deca/context/invalid/class4.deca
class A{
    int a;
    int b;
}

{
    A FIRST=new A();
    FIRST.a=10.0;
    FIRST.b=10.51;
}